# generator-oj-problem

./: .gitignore  LICENSE.txt  README.md  gop.sln  publish.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: description.md  generator.py  hint.md  input.md  problem.yml  solution.txt
samples/APlusB/: profile.json
samples/APlusB/descriptions/: output.md  source.txt
src/: gop.sln  publish.ps1  requirements.txt  setup.cfg
src/generator_oj_problem/: __init__.py  __main__.py  models.py  pipelines.py
src/generator_oj_problem/adapters/: __init__.py
src/generator_oj_problem/adapters/fps/: __init__.py  packer.py
src/generator_oj_problem/adapters/generic/: __init__.py  checker.py  initializer.py  loader.py  paths.py
src/generator_oj_problem/adapters/hustoj/: __init__.py
src/generator_oj_problem/generators/: __init__.py  processors.py  template.py  trimmers.py
src/gop/: Issue.cs  Linter.cs  Logger.cs  PackageConfig.cs  Problem.cs  ProblemConfig.cs  ProblemPath.cs  Program.cs  TestCasePath.cs  gop.csproj
src/gop/Adapters/: Issue.cs  Linter.cs  PackageProfile.cs  Pipeline.cs
src/gop/Adapters/FreeProblemSet/: Checker.cs  Packer.cs
src/gop/Adapters/Generic/: Checker.cs  Packer.cs
src/gop/Adapters/HustOJ/: Checker.cs  Packer.cs
src/gop/Adapters/LocalJudge/: Checker.cs  Packer.cs
src/gop/Helper/: ConsoleUI.cs
src/gop/Helpers/: ConsoleUI.cs  TextIO.cs
src/gop/Judgers/: Judger.cs  Runner.cs
src/gop/Problems/: ProblemPath.cs  ProblemProfile.cs  TestCasePath.cs
src/gop/Properties/: launchSettings.json
