[metadata]
name = generator-oj-problem
version = attr: generator_oj_problem.__version__
author = StardustDL
author_email = stardustdl@163.com
description = A command-line tool to generate Online-Judge problem.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/generator-oj-problem
project_urls =
    Source Code = https://github.com/StardustDL/generator-oj-problem
    Changes = https://github.com/StardustDL/generator-oj-problem/releases
    Bug Tracker = https://github.com/StardustDL/generator-oj-problem/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    click>=8.0
    PyYAML>=6.0
    mistune>=2.0.0

[options.entry_points]
console_scripts =
    gop = generator_oj_problem.__main__:main